--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <title>１セメスタ用 出席確認 ‼非公式‼</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            color: #000;
+            margin: 20px;
+            text-align: left; /* 左寄せ */
+        }
+        h1 {
+            color: #4169e1;
+            text-decoration: underline;
+            text-align: left; /* 左寄せ */
+        }
+        h2 {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+            text-align: left; /* 左寄せ */
+        }
+        a {
+            text-decoration: none;
+            font-weight: bold;
+            color: #222;
+            transition: color 0.3s ease;
+            display: block;
+            padding: 5px 0;
+            text-align: left; /* 左寄せ */
+        }
+        a:hover {
+            color: #555;
+        }
+        .box5 {
+            background-color: #e0f7fa;
+            padding: 15px;
+            border-radius: 5px;
+            width: 100%;
+            margin: 10px auto;
+            text-align: left; /* 左寄せ */
+        }
+        hr {
+            border: 1px solid #000;
+            margin: 20px 0;
+        }
+        @media screen and (max-width: 600px) {
+            body {
+                font-size: 16px;
+                max-width: 95%;
+            }
+            h1 {
+                font-size: 22px;
+            }
+            h2 {
+                font-size: 18px;
+            }
+            .box5 {
+                width: 100%;
+            }
+            a {
+                font-size: 16px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <h1>１セメスタ用 出席確認 ‼非公式‼</h1>
+    <hr>
 
+    <h1>月曜日</h1>
+    <div class="box5">
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/5204">英語理解１ gクラス(5204)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7202">数学基礎 bcクラス(7202)</a>
+    </div>
+
+    <hr>
+
+    <h1>火曜日</h1>
+    <div class="box5">
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/5307">言語と文化１ 中国語(5307)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7101">言語と文化１ ドイツ語(7101)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7104">情報リテラシ(7104)</a>
+    </div>
+
+    <hr>
+
+    <h1>水曜日</h1>
+    <div class="box5">
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7104">数理・データサイエンス・AI入門(7104)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/5203">英語表現１ gクラス(5203)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/8103">情報リテラシ演習１(8103)</a>
+    </div>
+
+    <hr>
+
+    <h1>木曜日</h1>
+    <div class="box5">
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/5304">日本語表現法 b(5304)</a> ※選択科目
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/5102">倫理学(5102)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/8204">憲法と社会(8204)</a>
+    </div>
+
+    <hr>
+
+    <h1>金曜日</h1>
+    <div class="box5">
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7103">高度応用情報科学概論１(7103)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7103"><strong>奇数</strong> 線形代数基礎(7103)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/7204"><strong>偶数</strong> 線形代数基礎(7204)</a>
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/1331">初年次教育(1331)</a>
+    </div>
+
+    <hr>
+
+    <h1>土曜日/津田沼キャンパス</h1>
+    <div class="box5">
+        <a href="https://attendance.is.it-chiba.ac.jp/attendance/class_room/611">教職概論(611)</a>
+    </div>
+</body>
+</html>
